// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls onToggle prop on click 1`] = `
<div>
  <div
    class="ui buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui button"
      data-testid="grid"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
      Grid
    </button>
    <button
      aria-label="see studies in list view"
      class="ui active button"
      data-testid="list"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
      List
    </button>
  </div>
</div>
`;

exports[`changes active button on click 1`] = `
<div>
  <div
    class="ui buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui active button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
      Grid
    </button>
    <button
      aria-label="see studies in list view"
      class="ui active button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
      list
    </button>
  </div>
</div>
`;

exports[`renders toggle button correctly 1`] = `
<div>
  <div
    class="ui buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui active button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
      Grid
    </button>
    <button
      aria-label="see studies in list view"
      class="ui active button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
      list
    </button>
  </div>
</div>
`;

exports[`renders toggle button hiding Text 1`] = `
<div>
  <div
    class="ui buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui active icon button"
      data-testid="grid"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
    </button>
    <button
      aria-label="see studies in list view"
      class="ui icon button"
      data-testid="list"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
    </button>
  </div>
</div>
`;

exports[`renders toggle button in diffrent sizes 1`] = `
<div>
  <div
    class="ui medium buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui active button"
      data-testid="grid"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
      Grid
    </button>
    <button
      aria-label="see studies in list view"
      class="ui button"
      data-testid="list"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
      List
    </button>
  </div>
  <div
    class="ui large buttons"
  >
    <button
      aria-label="see studies in grid view"
      class="ui active button"
      data-testid="grid"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="grid layout icon"
      />
      Grid
    </button>
    <button
      aria-label="see studies in list view"
      class="ui button"
      data-testid="list"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="list icon"
      />
      List
    </button>
  </div>
</div>
`;
